<resources>
    <string name="app_name">  LOJA TOUR</string>

    //Crea cadenas para el identificador de tu aplicación de Facebook
    <string name="facebook_app_id">249394119238617</string>
    <string name="fb_login_protocol_scheme">fb249394119238617</string>

    //Mensajes Facebook
    <string name="cancel_login">Se cancelo la operación</string>
    <string name="error_login">Se produjo un error al iniciar con Facebook</string>
    <string name="logout">Cerrar sesión</string>


    //Mensajes de Firebase
    <string name="firebase_error_login">No se ha podido autentificar con Firebase</string>


    //Login
    <string name="inicio_sesion">Inicio de Sesión</string>
    <string name="nombre_app">Loja Tour</string>
    <string name="btn_login">Iniciar</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="email">Email</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_registrar">Registrar</string>


    <string name="usuarioVacio">Fantan datos en usuario</string>
    <string name="claveVacio">Faltan datos en contraseña</string>

    //txt
    <string name="txt_registrar">Registrarse</string>

    <string name="inicio">Inicio</string>
    <string name="buscar">BUSCAR SITIO</string>
    <string name="buscarsite">Buscar</string>
    <string name="info">Informacion</string>
    <string name="perfil">Perfil</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <string name="msg_no_busqueda">No Busqueda</string>
    <string name="nombre">Nombre: </string>
    <string name="descripcion">Descripcion: </string>
    <string name="title_activity_maps">Map</string>

    <string name="action_settings">Cerrar Sesión</string>

    <string name="txt_busqueda_vacio">Input Vacio Please ingrese un valor</string>

    <string name="itemEditPerfil">EditarPerfil</string>
    <string name="title_activity_sitios_favoritos">Sitios Turisticos Favoritos</string>
    <string name="title_activity_sitios_likes">Likes</string>

</resources>
